src/pages/PageBuilder/Configs/common/common_editor_styles.scss
@import '../../../../styles/variables';

.builderPage {
  display: flex;
  justify-content: flex-start;
  align-items: stretch;
  flex-wrap: nowrap;
  height: 100vh;

  .leftSection {
    flex-grow: 1;
    flex-basis: 15%;
    overflow: hidden;
    background-color: map-get($map: $colors, $key: 'Cyprus');
    color: map-get($map: $colors, $key: 'White');
  }

  .rightSection {
    flex-grow: 1;
    flex-basis: 15%;
    overflow: hidden;
    background-color: map-get($map: $colors, $key: 'Cyprus');
    color: map-get($map: $colors, $key: 'White');
  }

  .middleSection {
    flex-grow: 1;
    flex-basis: 75%;
    overflow: auto;
  }

  .topPanel {
    height: 40px;
    padding: 4px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: nowrap;
    background-color: map-get($map: $colors, $key: 'Cyprus');
    color: map-get($map: $colors, $key: 'White');

    .backButton {
      font-size: 13px;
      color: map-get($map: $colors, $key: 'White') !important;

      &:hover {
        color: map-get($map: $colors, $key: 'DodgerBlue') !important;
      }
    }

    .saveTimeText {
      color: map-get($map: $colors, $key: 'Silver');
    }

    button {
      background: transparent;
      text-align: center;
      border: none;
      font-size: 20px;

      &:hover {
        color: map-get($map: $colors, $key: 'DodgerBlue');
      }
    }

    :global {
      button.active {
        color: map-get($map: $colors, $key: 'DodgerBlue');
      }
    }

    .buttonsContainer {
      width: 100%;
      flex-basis: 100%;
      padding: 0 8px;
      align-items: center;
    }
  }

  .panelContainer {
    overflow: auto;
    height: 100%;

    &::-webkit-scrollbar-track {
      background: rgba(0, 0, 0, 0.1);
    }
    
    &::-webkit-scrollbar-thumb {
      background-color: rgba(255, 255, 255, 0.2);
    }
    
    &::-webkit-scrollbar {
      width: 8px;
    }
  }
}

:global {
  #empty-selection {
    text-align: center;
    padding: 12px;
  }

  .gjs-cv-canvas {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }

  .gjs-pn-panels {
    display: none;
  }

  .gjs-pn-buttons {
    justify-content: space-around;
  }

  .custom-trait-layout {
    .custom-trait-label {
      margin-bottom: 12px;
    }
  }

  .button-list-container {
    display: flex;
    flex: 1 0 100%;
    row-gap: 8px;
    flex-direction: column;
    
    .button-item-container {
      display: flex;
      flex: 1 0 100%;
      justify-content: space-around;
      flex-wrap: nowrap;
      align-items: center;
      column-gap: 8px;

      .button-trait-content {
        flex: 1 0 auto;
      }
      
      .button-trait-cta {
        padding: 2px 4px;
        background-color: map-get($map: $colors, $key: 'DodgerBlue');
      }
    }

    .button-trait-add {
      display: flex;
      flex: 1 0 100%;
      justify-content: center;
      text-align: center;
      background-color: map-get($map: $colors, $key: 'DodgerBlue');
    }
  }

  .input-slider-container {
    width: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;

    .input-slider-text {
      flex: 0 0 24px;
      margin: 0 2px;
    }

    .input-slider {
      flex: 1 1 auto;
    }
  }

  .input-slider-value-container {
    width: 100%;
    text-align: left;
  }

  .input-select {
    color: map-get($map: $colors, $key: 'Black');
    width: 100%;
    min-height: 24px;
  }

  .gjs-one-bg {
    background-color: map-get($map: $colors, $key: 'Cyprus');
  }

  .gjs-two-color {
    color: map-get($map: $colors, $key: 'White');
  }

  .gjs-four-color {
    color: map-get($map: $colors, $key: 'DodgerBlue');
  }

  .gjs-four-color-h:hover {
    color: map-get($map: $colors, $key: 'DodgerBlue');
  }

  .gjs-field {
    background-color: rgba(0, 0, 0, 0.7);
  }

  .gjs-radio-item {
    height: 24px;
  }

  // Styling for flex icons
  .icons-flex {
    // background-size: 70% 65% !important;
    height: 100%;
    width: 100%;
    opacity: 0.9;
  }
  .icon-dir-row {
    background: url('../../../../assets/images/flex_icons/flex-dir-row.png') no-repeat center;
  }
  .icon-dir-row-rev {
    background: url('../../../../assets/images/flex_icons/flex-dir-row-rev.png') no-repeat center;
  }
  .icon-dir-col {
    background: url('../../../../assets/images/flex_icons/flex-dir-col.png') no-repeat center;
  }
  .icon-dir-col-rev {
    background: url('../../../../assets/images/flex_icons/flex-dir-col-rev.png') no-repeat center;
  }
  .icon-just-start {
    background: url('../../../../assets/images/flex_icons/flex-just-start.png') no-repeat center;
  }
  .icon-just-end {
    background: url('../../../../assets/images/flex_icons/flex-just-end.png') no-repeat center;
  }
  .icon-just-sp-bet {
    background: url('../../../../assets/images/flex_icons/flex-just-sp-bet.png') no-repeat center;
  }
  .icon-just-sp-ar {
    background: url('../../../../assets/images/flex_icons/flex-just-sp-ar.png') no-repeat center;
  }
  .icon-just-sp-cent {
    background: url('../../../../assets/images/flex_icons/flex-just-sp-cent.png') no-repeat center;
  }
  .icon-al-start {
    background: url('../../../../assets/images/flex_icons/flex-al-start.png') no-repeat center;
  }
  .icon-al-end {
    background: url('../../../../assets/images/flex_icons/flex-al-end.png') no-repeat center;
  }
  .icon-al-str {
    background: url('../../../../assets/images/flex_icons/flex-al-str.png') no-repeat center;
  }
  .icon-al-center {
    background: url('../../../../assets/images/flex_icons/flex-al-center.png') no-repeat center;
  }

  [data-tooltip] {
    position: relative;
  }
  
  [data-tooltip]::after {
    font-family: Helvetica, sans-serif;
    background: rgba(55, 61, 73, 0.9);
    border-radius: 3px;
    bottom: 100%;
    color: #fff;
    content: attr(data-tooltip);
    display: block;
    font-size: 12px;
    left: 50%;
    line-height: normal;
    max-width: 32rem;
    opacity: 0;
    overflow: hidden;
    padding: 0.6rem 1rem;
    pointer-events: none;
    position: absolute;
    text-overflow: ellipsis;
    -webkit-transform: translate(-50%, 0);
    -ms-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
    transition: all 0.216s ease;
    z-index: 99;
  }
  
  [data-tooltip]:focus::after,
  [data-tooltip]:hover::after {
    opacity: 1;
    -webkit-transform: translate(-50%, -0.5rem);
    -ms-transform: translate(-50%, -0.5rem);
    transform: translate(-50%, -0.5rem);
  }
  
  [data-tooltip][disabled],
  [data-tooltip].disabled {
    pointer-events: auto;
  }
  
  [data-tooltip-pos=right]::after {
    bottom: 50%;
    left: 100%;
    -webkit-transform: translate(0, 50%);
    -ms-transform: translate(0, 50%);
    transform: translate(0, 50%);
  }
  
  [data-tooltip-pos=right]:focus::after,
  [data-tooltip-pos=right]:hover::after {
    -webkit-transform: translate(0.5rem, 50%);
    -ms-transform: translate(0.5rem, 50%);
    transform: translate(0.5rem, 50%);
  }
  
  [data-tooltip-pos=bottom]::after {
    bottom: auto;
    top: 100%;
    -webkit-transform: translate(-50%, 0);
    -ms-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
  }
  
  [data-tooltip-pos=bottom]:focus::after,
  [data-tooltip-pos=bottom]:hover::after {
    -webkit-transform: translate(-50%, 0.5rem);
    -ms-transform: translate(-50%, 0.5rem);
    transform: translate(-50%, 0.5rem);
  }
  
  [data-tooltip-pos=left]::after {
    bottom: 50%;
    left: auto;
    right: 100%;
    -webkit-transform: translate(0, 50%);
    -ms-transform: translate(0, 50%);
    transform: translate(0, 50%);
  }
  
  [data-tooltip-pos=left]:focus::after,
  [data-tooltip-pos=left]:hover::after {
    -webkit-transform: translate(-0.5rem, 50%);
    -ms-transform: translate(-0.5rem, 50%);
    transform: translate(-0.5rem, 50%);
  }
}

